add jwt authentication
