# api/openapi/authentication.yml
@@ -31,7 +31,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/MessageResponse"
+                $ref: "#/components/schemas/LoginResponse"
   /register:
     post:
       tags: [Authentication]
@@ -51,6 +51,18 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/MessageResponse"
+  /user:
+    get:
+      tags: [Authentication]
+      operationId: getUser
+      description: get user profile
+      responses:
+        "200":
+          description: get user profile success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserResponse"
 
 components:
   schemas:
@@ -75,9 +87,50 @@ components:
         password:
           type: string
 
+    LoginResponse:
+      type: object
+      required: [data, message]
+      properties:
+        message:
+          type: string
+        data:
+          type: string
+          $ref: "#/components/schemas/Token"
+    UserResponse:
+      type: object
+      required: [data, message]
+      properties:
+        message:
+          type: string
+        data:
+          type: object
+          $ref: "#/components/schemas/User"
     MessageResponse:
       type: object
       required: [message]
       properties:
         message:
+          type: string
+    
+    Token:
+      type: object
+      required: [token, expired_at]
+      properties:
+        token:
+          type: string
+        expired_at:
+          type: string
+          format: date-time
+    User:
+      type: object
+      required: [id, first_name, last_name, email]
+      properties:
+        id:
+          type: string
+          format: uuid
+        first_name:
+          type: string
+        last_name:
+          type: string
+        email:
           type: string
