# src/authentication/domain/token/entity.go
@@ -1,0 +1,9 @@
+package token
+
+import "time"
+
+type Token struct {
+	Token     string    `json:"token"`
+	ExpiredAt time.Time `json:"expired_at"`
+}
+
