# src/authentication/presentation/http/openapi_types.gen.go
@@ -3,10 +3,22 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package http
 
+import (
+	"time"
+
+	openapi_types "github.com/oapi-codegen/runtime/types"
+)
+
 // LoginRequest defines model for LoginRequest.
 type LoginRequest struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
+}
+
+// LoginResponse defines model for LoginResponse.
+type LoginResponse struct {
+	Data    Token  `json:"data"`
+	Message string `json:"message"`
 }
 
 // MessageResponse defines model for MessageResponse.
@@ -20,6 +32,26 @@ type RegisterRequest struct {
 	FirstName string `json:"first_name"`
 	LastName  string `json:"last_name"`
 	Password  string `json:"password"`
+}
+
+// Token defines model for Token.
+type Token struct {
+	ExpiredAt time.Time `json:"expired_at"`
+	Token     string    `json:"token"`
+}
+
+// User defines model for User.
+type User struct {
+	Email     string             `json:"email"`
+	FirstName string             `json:"first_name"`
+	Id        openapi_types.UUID `json:"id"`
+	LastName  string             `json:"last_name"`
+}
+
+// UserResponse defines model for UserResponse.
+type UserResponse struct {
+	Data    User   `json:"data"`
+	Message string `json:"message"`
 }
 
 // LoginJSONRequestBody defines body for Login for application/json ContentType.
